# Perfect-Fit

./: .gitignore  Architecture.md  FEATURE_BREAKDOWN.md  PROJECT_BRIEF.md  README.md  SETUP_GUIDE.md  check_imports.py  docker-compose.yml  mvp_plan.md  mvp_plan.md.resolved.md  package-lock.json  package.json  setup_project.ps1  test_parsing.py  turbo.json  verify_concurrency.py
.github/workflows/: deploy-backend.yml  deploy-frontend.yml  deploy.yml  main_perfect-fit.yml
Perfect Fit/: manifest.json
apps/candidate-portal/: package.json
backend/: execute_migration.py
backend/analytics-service/: requirements.txt
backend/auth-service/: .env.example
backend/fastapi_app/: .dockerignore  Dockerfile  check_db.py  dependencies.py  main.py  requirements.txt  startup.sh  test_auth.py  test_openai.py
backend/migrations/: 001_create_technical_assessments.sql  002_create_technical_assessment_responses.sql  003_upgrade_job_schema.sql  004_add_job_user_fks.sql
backend/profile-service/: package.json
database/: fix_recursion.sql  job_roles.sql  job_roles_migration.sql  migration_add_feedback.sql  migration_candidate_flow.sql  migration_optimistic_locking.sql  migration_performance_security.sql  supabase_profiles.sql
frontend/: .env.local  next.config.js  package-lock.json  package.json  startup.sh  tsconfig.tsbuildinfo
frontend/candidate-portal/: package.json
frontend/portal/: .env.local  package.json  tsconfig.tsbuildinfo
frontend/recruiter-portal/: package.json
frontend/src/: middleware.ts
frontend/src/lib/: api.ts  (+3 more)
services/analysis-service/: pyproject.toml
(+97 files in other folders)
